# PEPGMP

./: .cursorrules  .dockerignore  .env.backup.20251204_175406  .env.example  .env.production.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .rsyncignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.dev  Dockerfile.frontend  Dockerfile.prod  Dockerfile.supervisor  GPU性能优化README.md  LICENSE  Makefile  README.md  alembic.ini  check_alert_history.sql  code-analyzer.skill  debug_hardware_detection.py  demo_camera_direct.py  docker-compose.dev-db.yml  docker-compose.prod.1panel.yml  docker-compose.prod.full.yml  docker-compose.prod.mlops.yml  docker-compose.prod.windows.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  engineering-code.skill  how --name-only 461baf8  main.py  mypy.ini  p2_3_analysis.md  (+25 more)
.github/workflows/: ci.yml
.trae/rules/: architecture_compliance.md
alembic/: env.py
alembic/versions/: 26e240c70ee7_add_alert_status_fields.py  de374ef6dace_add_core_business_tables_to_sqlalchemy_.py
archive/20250905/: demo_legacy_candidates.txt  duplicate_tests.txt  maybe_unreferenced_py.txt  top_sizes.txt
backups/dev/: backup_info_20251125_132836.txt  backup_info_20251125_133358.txt
config/: cameras.yaml  performance_optimization.yaml  production.env.example  regions.json  regions_site_20250902.json  unified_params.yaml
deployment/: set_ubuntu_environment.sh  setup_ubuntu_environment.sh
deployment/nginx/: frontend.conf
deployment/windows_gpu_optimization/: gpu_optimization.py  optimized_config.json  performance_monitor.py  tensorrt_guide.json  windows_setup.bat
deprecated/k8s-backup-20250225/: deploy-k8s.yml
development/: start_dev_server.sh  start_frontend.sh
docker_backup/: Dockerfile  Dockerfile.api  Dockerfile.dev  Dockerfile.supervisor  docker-compose.dev-db.yml  docker-compose.prod.full.yml  docker-compose.yml
docs/: 1PANEL_DEPLOYMENT_GUIDE.md  ADD_FRONTEND_SERVICE.md  ALERT_HISTORY_DATA_ANALYSIS.md  ALL_ISSUES_FIX_SUMMARY.md  API_使用示例.md  API_文档.md  API启动失败问题分析.md  API容器重启故障排查.md  API路径规范标准.md  ARCHITECTURE_COMPLIANCE_CHECK.md  ARCHITECTURE_COMPLIANCE_IMPROVEMENTS.md  ARCHITECTURE_COMPLIANCE_NO_FALLBACK.md  ARCHITECTURE_LOGGING_SPECIFICATION.md  ARCHITECTURE_REVIEW_REPORT.md  BROWSER_CACHE_CLEAR_GUIDE.md  BUILD_SUCCESS_SUMMARY.md  CAMERA_DETECTION_FLOW_ARCHITECTURE_REVIEW.md  CAMERA_ID_DESIGN.md  CAMERA_STATUS_ANALYSIS.md  CHECK_DOCKER_IMAGES.md  CHECK_ENV_FILE.md  COMPLETE_REDEPLOYMENT_STEPS.md  COMPREHENSIVE_DETECTION_OPTIMIZATION.md  COMPREHENSIVE_TEST_REPORT.md  CONFIGURATION_ANALYSIS.md  CONFIGURATION_MIGRATION_PLAN.md  CONFIGURATION_MIGRATION_PROGRESS.md  CONFIGURATION_MIGRATION_STAGE1_COMPLETE.md  CONFIGURATION_MIGRATION_STAGE2_COMPLETE.md  CONFIGURATION_STORAGE_ANALYSIS.md  CONFIG_GENERATED_NEXT_STEPS.md  CONNECTION_LEAK_FIX.md  CUDA_VERSION_MISMATCH_SOLUTION.md  CUDA_cuDNN_TensorRT应用指南.md  CURRENT_DETECTION_LOGIC_ANALYSIS.md  DATABASE_CONNECTION_ARCHITECTURE_ANALYSIS.md  DATABASE_INITIALIZATION.md  DATABASE_INITIALIZATION_SUMMARY.md  DATABASE_MIGRATION_TO_ALEMBIC.md  DATABASE_STATISTICS_WRITE_CHECK.md  (+477 more)
docs/1_architecture/: system_design.md
docs/2_guides/: deployment.md  gpu_and_performance_optimization.md  onboarding.md
examples/: __init__.py  demo_camera_direct.py  domain_model_usage.py  example_usage.py  integrate_yolo_detector.py  use_yolo_hairnet_detector.py
frontend/: .env.development  .eslintrc.cjs  .npmrc  .prettierrc  .stylelintrc.json  app.js  camera_config.html  common.css  debug_frontend.html  env.development.example  env.production.example  eslint.config.js  index.html  index.vite.html  nav.css  nav.js  package-lock.json  package.json  region_config.html  region_config.js  statistics.html  system_info.html  theme.css  tsconfig.json  vite.config.ts
models/: handwash_xgb.joblib  handwash_xgb.json  handwash_xgb_backup_20250915_155351.joblib  handwash_xgb_tmp.joblib
monitoring/: alert_rules.yml  alertmanager.yml  loki-config.yaml  prometheus.yml  promtail-config.yaml
nginx/: nginx.conf
reports/: deployment_simulation_option_c_20260225.md  duplicate_tests_report.md  legacy_cleanup_plan.md  legacy_cleanup_report.json  legacy_cleanup_report.md
scripts/: CLEANUP_EXECUTION_PLAN.md  CLEANUP_SUMMARY.md  COMPLETE_SCRIPTS_INVENTORY.md  README.md  README_PROD_BUILD.md  SCRIPTS_CLEANUP_PLAN.md  SUBDIRECTORY_CLEANUP_SUMMARY.md  SUBDIRECTORY_TEMP_SCRIPTS_ANALYSIS.md  __init__.py  activate_env.ps1  backup_db.sh  backup_dev_data.sh  build_prod_images.sh  build_prod_only.ps1  build_prod_only.sh  check_alert_data.sql  check_camera_table_structure.py  check_cameras_in_db.py  check_database_health.sh  check_database_init.sh  check_db_structure.py  check_deployment_readiness.sh  check_frontend_detailed.sh  check_frontend_status.sh  check_images.sh  check_saved_records.py  check_video_stream_status.sh  cleanup_models.sh  cleanup_old_containers.sh  cleanup_old_frontend.sh  cleanup_output.py  cleanup_project.sh  cleanup_root.sh  convert_to_english.py  create_resume_training_workflow.py  db_migrate.sh  deep_cleanup.sh  deploy_from_registry.sh  deploy_mixed_registry.sh  deploy_prod.sh  (+87 more)
secrets/: db_password.txt
src/: __init__.py
tests/: __init__.py  conftest.py  test_event_rules.py  test_process_engine_min.py
tools/: __init__.py  check_service_status.sh  full_rollout_verification.sh  functionality_comparison_test.sh  functionality_verification_phase2_3.sh  handwash_features.py  integration_test.sh  legacy_scanner.py  monitoring_config.sh  perf_probe.py  performance_test_phase2_3.sh  quick_integration_test.sh  rollback_verification.sh  rollout_phase2_3.sh  rollout_preparation_check.sh  rollout_start.sh  rollout_verification.sh  rollout_verification_phase2.sh  rollout_verification_phase3.sh  rollout_verification_write_operations.sh  start_rollout.sh  test_api_connectivity.sh  test_intelligent_features.py  test_mlops_integration.py  train_handwash_xgb.py  verify_frontend_features.py  verify_new_endpoints.sh  visualize_regions.py
user_profiles/: demo_user.json
(+554 files in other folders)
