[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "human-behavior-detection"
version = "0.1.0"
description = "人体行为检测系统 - Human Behavior Detection System"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Development Team", email = "dev@example.com" }]
keywords = ["computer-vision", "behavior-detection", "yolo", "opencv", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # 深度学习框架
    # 注意：PyTorch 默认从 PyPI 安装 CPU 版本
    # 如果需要 CUDA 支持，请手动安装 CUDA 版本：
    # pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
    # 或者使用可选依赖组：pip install -e ".[gpu-cuda]"
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",

    # 计算机视觉
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "mediapipe>=0.10.0",
    "pillow>=9.5.0",

    # 数据处理
    "numpy>=1.24.0,<2.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",

    # Web框架
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "websockets>=11.0.0",

    # 数据库
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.11.0",
    "psycopg2-binary>=2.9.0",
    "greenlet>=2.0.0",  # 异步数据库支持

    # 任务队列
    "redis>=4.5.0",
    "celery>=5.3.0",

    # 数据验证
    "pydantic>=2.0.0",

    # 安全
    "python-jose[cryptography]>=3.3.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "passlib[bcrypt]>=1.7.4",

    # 工具库
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
# 按设备需求安装的依赖
gpu-nvidia = [
    # NVIDIA GPU 监控（仅在使用 NVIDIA GPU 时需要）
    # 注意：AMD GPU、Intel GPU、Apple Silicon、CPU 用户无需安装
    "pynvml>=11.5.0",
]

# CUDA 版本的 PyTorch 安装说明
# 注意：此依赖组仅作为标记，实际安装需要手动执行命令
# 因为 PyTorch CUDA 版本需要从 PyTorch 官方索引安装，无法在 pyproject.toml 中直接指定
# 安装方法：
# 1. 先安装基础依赖：pip install -e .
# 2. 卸载 CPU 版本：pip uninstall -y torch torchvision torchaudio
# 3. 安装 CUDA 版本：pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
# 详细说明请参考: docs/PYTORCH_CUDA_INSTALLATION.md
gpu-cuda = [
    # 此依赖组仅作为标记，实际安装需要手动执行上述命令
]

# 按功能需求安装的依赖
ml = [
    # XGBoost 机器学习分类器 - 洗手行为识别增强
    # 用于提升洗手行为识别的准确率，与规则引擎融合使用
    # 详细说明请参考: docs/XGBOOST_ANALYSIS.md
    "xgboost>=1.7.0",
]

# 开发依赖
dev = [
    # 测试框架
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "pytest-benchmark>=4.0.0",

    # 代码质量
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-import-order>=0.18.2",
    "flake8-bugbear>=23.7.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",

    # 安全扫描
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "pip-audit>=2.6.0",

    # 开发工具
    "pre-commit>=3.3.0",
    "pip-tools>=7.3.0",
    "bumpversion>=0.6.0",

    # 文档
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",

    # 开发环境
    "ipython>=8.14.0",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "httpx>=0.24.0",
    "factory-boy>=3.3.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
]
production = [
    # Web服务器
    "gunicorn>=21.2.0",

    # 监控和日志
    "sentry-sdk[fastapi]>=1.29.0",
    "prometheus-client>=0.17.0",
    "structlog>=23.1.0",

    # 性能优化
    "orjson>=3.9.0",
    "ujson>=5.8.0",

    # 缓存
    "redis[hiredis]>=4.5.0",

    # 健康检查
    "healthcheck>=1.3.3",
]

# 组合安装选项（方便用户）
# 注意：用户可以通过 pip install ".[gpu-nvidia,ml]" 来组合安装
# 这里提供一个便捷的组合选项
gpu-nvidia-ml = [
    # NVIDIA GPU + ML 组合（推荐用于 NVIDIA GPU 用户）
    "pynvml>=11.5.0",
    "xgboost>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/example/human-behavior-detection"
Documentation = "https://human-behavior-detection.readthedocs.io/"
Repository = "https://github.com/example/human-behavior-detection.git"
"Bug Tracker" = "https://github.com/example/human-behavior-detection/issues"

[project.scripts]
hbd = "src.cli:main"
hbd-api = "src.api.main:run_server"
hbd-detect = "src.detection.main:run_detection"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.txt", "*.md"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
  )/
)
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]
skip_glob = ["**/migrations/*"]
known_first_party = ["src"]
known_third_party = [
    "cv2",
    "numpy",
    "PIL",
    "yaml",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "redis",
    "celery",
    "pydantic",
    "jose",
    "passlib",
    "loguru",
    "click",
    "rich",
    "psutil",
    "ultralytics",
]

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "ultralytics.*",
    "redis.*",
    "celery.*",
    "jose.*",
    "passlib.*",
    "psutil.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
    "detection: marks tests as detection tests",
    "gpu: marks tests that require GPU",
    "camera: marks tests that require camera",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/venv/*", "*/migrations/*", "setup.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
show_missing = true
skip_covered = false
skip_empty = false
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]

# Ruff configuration (alternative to flake8)
[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]
line-length = 88
target-version = "py38"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = [
    "S101", # use of assert detected
    "S311", # standard pseudo-random generators are not suitable for security/cryptographic purposes
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["src"]
[tool.flake8]
max-line-length = 88
ignore = "E203,W503,E501,F401,F841,E722,C901,F541,E713,W605,F821,E402,E731,E712"
max-complexity = 20
exclude = ".git,__pycache__,build,dist,.venv,venv,tests,scripts,docs"
